--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <!-- Starting an immersive WebXR session requires user interaction.
     We start this one with a simple button. -->
+<p>This is an example!</p>
 <button onclick="activateXR()">Start Hello WebXR</button>
 <script>
 async function activateXR() {
@@ -36,7 +37,7 @@ async function activateXR() {
 
 	// Create the cube and add it to the demo scene.
 	const cube = new THREE.Mesh(new THREE.BoxBufferGeometry(0.2, 0.2, 0.2), materials);
-	cube.position.set(0, 0, -5);
+	cube.position.set(0, 0, 0);
 	scene.add(cube);
 
 	// Set up the WebGLRenderer, which handles rendering to the session's base layer.
