--- a/index.html
+++ b/index.html
@@ -100,7 +100,12 @@ async function activateXR() {
 		if (pose) {
 			// In mobile AR, we only have one view.
 			const view = pose.views[0];
-			directionalLight.rotation.set(2,time,2);
+			directionalLight.rotation.set(
+				2,
+				directionalLight.rotation.y + time,
+				2
+				);
+			directionalLight.updateMatrixWorld(true);
 			const viewport = session.renderState.baseLayer.getViewport(view);
 			renderer.setSize(viewport.width, viewport.height)
 
@@ -116,6 +121,8 @@ async function activateXR() {
 				reticle.position.set(hitPose.transform.position.x, hitPose.transform.position.y, hitPose.transform.position.z)
 				//reticle.rotation.y = time * 0.001;
 				reticle.updateMatrixWorld(true);
+			}else{
+				reticle.visible = false;
 			}
 
 
