Model Change Test

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Hello WebXR!</title>
+	<title>Oggal's First Steps in WebAR!</title>
 
 	<!-- three.js -->
 	<script src="https://unpkg.com/three@0.126.0/build/three.js"></script>
@@ -75,7 +75,7 @@ async function activateXR() {
 	})
 
 	let flower;
-	loader.load("https://immersive-web.github.io/webxr-samples/media/gltf/sunflower/sunflower.gltf", function(gltf) {
+	loader.load("https://immersive-web.github.io/webxr-samples/media/gltf/camp/camp.gltf", function(gltf) {
 	flower = gltf.scene;
 	});
 
