--- a/Task2/index.html
+++ b/Task2/index.html
@@ -3,11 +3,19 @@
 <head>
         <title>More WebAR</title>
         <meta charset="utf-8">
+        <script type="importmap">
+                {
+                  "imports": {
+                    "three": "https://unpkg.com/three/build/three.module.js",
+                    "three/addons/": "https://unpkg.com/three/examples/jsm/"
+                  }
+                }
+              </script>
 </head>
 <body>
-        <script src="script.js"></script>
+        <script src="./script.js"></script>
         <div id = "AR_container">
-                
+
         </div>
 </body>
 </html>
