--- a/Task2/index.html
+++ b/Task2/index.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-        <script type="module" src="./script.js"></script>
+        <script src="./script.js"></script>
         <div id = "AR_container">
 
         </div>
