--- a/Task2/index.html
+++ b/Task2/index.html
@@ -2,11 +2,11 @@
 <script type="importmap">
         {
           "imports": {
-            "three": "https://unpkg.com/three/build/three.module.js",
-            "three/addons/": "https://unpkg.com/three/examples/jsm/"
+                three": "https://unpkg.com/three/build/three.module.js",
+                "three/addons/": "https://unpkg.com/three/examples/jsm/"
           }
         }
-      </script>
+</script>
 <html lang="en">
 <head>
         <title>More WebAR</title>
