--- a/Task2/index.html
+++ b/Task2/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
         <script type="module" src="./script.js"></script>
-        <div id = "AR_container" style="height: 100%;">
+        <div id = "AR_container" style="height: 500px;">
 
         </div>
 </body>
