--- a/Task2/index.html
+++ b/Task2/index.html
@@ -15,8 +15,9 @@
 </head>
 <body>
         <script type="module" src="./script.js"></script>
-        <div id = "AR_container" style="height: 500px; width: 500px;">
+        <div id="AR_container" style="height: 500px; width: 500px;">
 
         </div>
+        <button id="XR_Button" onclick="activateXR();">View in AR</button>
 </body>
 </html>
