--- a/Task2/index.html
+++ b/Task2/index.html
@@ -18,6 +18,6 @@
         <div id="AR_container" style="height: 500px; width: 500px;">
 
         </div>
-        <button id="XR_Button" onclick="activateXR();">View in AR</button>
+        <button id="XR_Button">View in AR</button>
 </body>
 </html>
