--- a/Task2/index.html
+++ b/Task2/index.html
@@ -7,7 +7,7 @@
         <script type="importmap">
                 {
                   "imports": {
-                        "three": "https://unpkg.com/three/build/three.module.js",
+                        "three": "https://unpkg.com/three@0.126.0/build/three.module.js",
                         "three/addons/": "https://unpkg.com/three/examples/jsm/"
                   }
                 }
