--- a/Task2/index.html
+++ b/Task2/index.html
@@ -4,6 +4,13 @@
 <head>
         <title>More WebAR</title>
         <meta charset="utf-8">
+        <meta name="viewport"
+                content="width=device-width,
+                user-scalable=no,
+                initial-scale=1.0,
+                maximum-scale=1.0,
+                minimum-scale=1.0"
+        >
         <script type="importmap">
                 {
                   "imports": {
