--- a/Task2/index.html
+++ b/Task2/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
         <script type="module" src="./script.js"></script>
-        <div id="AR_container" style="height: 500px; width: 500px;">
+        <div id="AR_container" style="height: 500px; position: center;">
 
         </div>
         <button id="XR_Button">View in AR</button>
