--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -4,11 +4,16 @@
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   </head>
   <body>
+
     <a-scene inspector="" keyboard-shortcuts="" screenshot="" xr-mode-ui="enterVREnabled: false; XRMode: ar" device-orientation-permission-ui="">
+      <a-assets>
+        <a-asset-item id="castle" src="../models/BoxyCastle.gltf"></a-asset-item>
+      </a-assets>
+      
       <a-box position="-2 0.5 -3" rotation="0 45 0" color="#4CC3D9" material="" geometry=""></a-box>
       <a-sphere position="0 1 -5" radius="1" color="#EF2D5E" link="href: https://oggal.github.io; title: My Website; highlighted: true" material="" geometry=""></a-sphere>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="8" height="6" color="#7BC8A4" material="" geometry=""></a-plane>
-      
+      <a-entity position="0 0 -4" rotation="-90 0 0" gltf-model="#castle" scale="0.5 0.5 0.5" material="" geometry=""></a-entity>
       <a-sky color="#CCECEC" material="" geometry=""></a-sky>
     </a-scene>
   </body>
