--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -13,7 +13,7 @@
       <a-box position="-2 0.5 -3" rotation="0 45 0" color="#4CC3D9" material="" geometry=""></a-box>
       <a-sphere position="0 1 -5" radius="1" color="#EF2D5E" link="href: https://oggal.github.io; title: My Website; highlighted: true" material="" geometry=""></a-sphere>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="8" height="6" color="#7BC8A4" material="" geometry=""></a-plane>
-      <a-entity position="0 0 -4" rotation="-90 0 0" gltf-model="#castle" scale="0.5 0.5 0.5" material="" geometry=""></a-entity>
+      <a-entity position="2 0 -4" rotation=" 0 0" gltf-model="#castle" color="sand"></a-entity>
       <a-sky color="#CCECEC" material="" geometry=""></a-sky>
     </a-scene>
   </body>
