--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -14,7 +14,7 @@
       <a-sphere position="0 1 -5" radius="1" color="#EF2D5E" link="href: https://oggal.github.io; title: My Website; highlighted: true" material="" geometry=""></a-sphere>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="8" height="6" color="#7BC8A4" material="" geometry=""></a-plane>
       <a-entity position="2 0 -4" rotation=" 0 0" gltf-model="#castle" color="sand"></a-entity>
-      <a-sky color="#CCECEC" material="" geometry=""></a-sky>
+      <!-- <a-sky color="#CCECEC" material="" geometry=""></a-sky> -->
     </a-scene>
   </body>
 </html>
