--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -11,9 +11,9 @@
       </a-assets>
       
       <!-- Camera-->
-      <a-entity camera>
+      <a-camera>
         <a-entity cursor="rayOrigin: mouse"></a-entity>
-      </a-entity>
+      </a-camera>
       <!-- Objects -->
       <a-box position="-2 0.5 -3" rotation="0 45 0" color="#4CC3D9" material="" geometry=""></a-box>
       <a-sphere position="0 1 -5" radius="1" color="#EF2D5E" link="href: https://oggal.github.io; title: My Website; highlighted: true" material="" geometry=""></a-sphere>
