--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -10,10 +10,8 @@
         <a-asset-item id="castle" src="../models/BoxyCastle.gltf"></a-asset-item>
       </a-assets>
       
-      <!-- Camera-->
-      <a-camera>
+      <!-- Cursor-->
         <a-entity cursor="rayOrigin: mouse"></a-entity>
-      </a-camera>
       <!-- Objects -->
       <a-box position="-2 0.5 -3" rotation="0 45 0" color="#4CC3D9" material="" geometry=""></a-box>
       <a-sphere position="0 1 -5" radius="1" color="#EF2D5E" link="target=blank; href: https://oggal.github.io;" material="" geometry=""></a-sphere>
