--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 
-    <a-scene inspector="" keyboard-shortcuts="" screenshot="" xr-mode-ui="enabled = true; enterVREnabled: false; XRMode: ar" device-orientation-permission-ui="">
+    <a-scene xr-mode-ui="enabled: true; XRMode: ar">
       <a-assets>
         <a-asset-item id="castle" src="../models/BoxyCastle.gltf"></a-asset-item>
       </a-assets>
