Fix XR mode button text

--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -6,7 +6,7 @@
   <body>
 
     <a-scene xr-mode-ui="enabled: true; XRMode: ar enterARButton: #myEnterARButton"" >
-      <a id="myEnterARButton" href="#"></a>
+      <a id="myEnterARButton" href="#">Enter XR</a>
       <a-assets>
         <a-asset-item id="castle" src="../models/BoxyCastle.gltf"></a-asset-item>
       </a-assets>
