Begin retruning complexity

--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 
-    <a-scene>
+    <a-scene xr-mode-ui="enterVREnabled: false">
       <a-assets>
         <a-asset-item id="castle" src="../models/BoxyCastle.gltf"></a-asset-item>
       </a-assets>
