--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -11,7 +11,7 @@
       </a-assets>
       
       <!-- Cursor-->
-        <a-entity cursor="rayOrigin: mouse"></a-entity>
+        <a-entity cursor="rayOrigin: camera"></a-entity>
       <!-- Objects -->
       <a-box position="-2 0.5 -3" rotation="0 45 0" color="#4CC3D9" material="" geometry=""></a-box>
       <a-sphere position="0 1 -5" radius="1" color="#EF2D5E" link="href: https://oggal.github.io;" material="" geometry=""></a-sphere>
