--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -11,7 +11,9 @@
       </a-assets>
       
       <!-- Cursor-->
+      <a-camera>
         <a-cursor></a-cursor>
+      </a-camera>
       <!-- Objects -->
       <a-box position="-2 0.5 -3" rotation="0 45 0" color="#4CC3D9" material="" geometry=""></a-box>
       <a-sphere position="0 1 -5" radius="1" color="#EF2D5E" material="" geometry=""></a-sphere>
