--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -5,15 +5,16 @@
   </head>
   <body>
 
-    <a-scene xr-mode-ui="enterVREnabled: false; XRMode: ar">
+    <a-scene 
+      xr-mode-ui="enterVREnabled: false; XRMode: ar"
+      cursor__mouse="rayOrigin: mouse"
+      cursor__xrselect="rayOrigin: xrselect">
       <a-assets>
         <a-asset-item id="castle" src="../models/BoxyCastle.gltf"></a-asset-item>
       </a-assets>
       
       <!-- Cursor-->
-      <a-camera>
-        <a-cursor></a-cursor>
-      </a-camera>
+        <!-- <a-cursor></a-cursor> -->
       <!-- Objects -->
       <a-box position="-2 0.5 -3" rotation="0 45 0" color="#4CC3D9" material="" geometry=""></a-box>
       <a-sphere position="0 1 -5" radius="1" color="#EF2D5E" material="" geometry=""></a-sphere>
