--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -11,13 +11,12 @@
       cursor__xrselect="rayOrigin: xrselect">
       <a-assets>
         <a-asset-item id="castle" src="../models/BoxyCastle.gltf"></a-asset-item>
-        <img id="github_logo" src="https://www.github.com/favicon.ico">
       </a-assets>
       
       <!-- Cursor-->
       <!-- Objects -->
       <a-box position="-2 0.5 -3" rotation="0 45 0" color="#4CC3D9" material="" geometry=""></a-box>
-      <a-sphere position="0 1 -5" radius="1" color="#EF2D5E" material="src: #github_logo" geometry=""></a-sphere>
+      <a-sphere position="0 1 -5" radius="1" color="#EF2D5E" material="shader: flat; src: url(https://www.github.com/favicon.ico)" geometry=""></a-sphere>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="8" height="6" color="#7BC8A4" material="" geometry=""></a-plane>
       <a-entity position="2 0 -4" rotation=" 0 0" gltf-model="#castle" class="clickable" onclick="openLink('https://oggal.github.io')"></a-entity>
       <!-- <a-sky color="#CCECEC" material="" geometry=""></a-sky> -->
