--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -19,7 +19,7 @@
       material="shader: flat; src: url(../logos/github-mark-white.png)"
       class="clickable" onclick="openLink('https://github.com/Oggal')"></a-box>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="8" height="6" color="#7BC8A4" material="" geometry=""></a-plane>
-      <a-entity position="2 0 -4" rotation=" 0 0" gltf-model="#castle" class="clickable" onclick="openLink('https://oggal.github.io')"></a-entity>
+      <a-entity position="2 0 -4" scale="0.75 0.75 0.75" rotation="10 0 0" gltf-model="#castle" class="clickable" onclick="openLink('https://oggal.github.io')"></a-entity>
       <!-- <a-sky color="#CCECEC" material="" geometry=""></a-sky> -->
 
       <script>
