--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -20,7 +20,7 @@
       class="clickable" onclick="openLink('https://github.com/Oggal')"></a-box>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="8" height="6" color="#7BC8A4" material="" geometry=""></a-plane>
       <a-entity position="2 0 -4" scale="0.75 0.75 0.75" rotation="0 10 0" gltf-model="#castle" class="clickable" onclick="openLink('https://oggal.github.io')">
-        <a-entity position="0 2 0" rotation =" 0 45 0" text="width: 2; lineHeight: 50; letterSpacing: 5; color: white; value: My Person Website">
+        <a-entity position="-1.5 2 1.5" rotation =" 0 -45 0" text="width: 5; lineHeight: 50; letterSpacing: 5; color: navy; value: My Person Website; align: center">
         </a-entity>        
       </a-entity>
       <!-- <a-sky color="#CCECEC" material="" geometry=""></a-sky> -->
